# taufspruch-finder

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  manifest.webmanifest  package-lock.json  package.json  pyproject.toml  registerSW.js  requirements.txt  sw.js  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
.github/workflows/: deploy.yml  lint-pr.yml
assets/: index-BGQAhREf.css  index-BdV7bx5i.js  index-CGF7Nywv.js  index-ColSupFn.css  index-D-i6m2C1.css  index-D7xFLqwI.js  index-DC59s2uD.js  index-DOkSJozB.js  index-DhaUuyaa.css
data/: verses.json
docs/: Agents.md  Cloud.md  Codex.md  Instructions.md  MASTERPLAN.md  MCP.md  instructions-codex-modes.md  instructions-copilot-aurora.md  loop.md  planning.md
scripts/: create-png-icons.mjs
skills/search/: README.md  embeddings.py  main.py  requirements.txt  test_search.py
src/: App.jsx  index.css
src/components/: FavoritesDrawer.jsx  FilterPanel.jsx  ModeSelector.jsx  SearchBar.jsx  ShareButton.jsx  VerseCard.jsx  VerseCard.test.jsx  VerseList.jsx
src/components/interview/: OrientationStep.jsx  ProgressBar.jsx  ResultStep.jsx  SearchStep.jsx  ShareStep.jsx  TraitsStep.jsx  WelcomeStep.jsx
src/context/: InterviewContext.jsx  ModeContext.jsx  ThemeContext.jsx  TranslationContext.jsx
src/hooks/: useFavorites.js  useSemanticSearch.js  useVerseFilter.js  useVerseFilter.test.js
src/modes/stimmungsuhr/: ClockWheel.jsx  StimmungsuhrApp.jsx
src/modes/swipe/: SwipeApp.jsx  SwipeCard.jsx
src/utils/: filterData.js
